// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`crm/contacts/crisp Create performs successfully 1`] = `
Ok {
  "value": Object {
    "id": "11f0b7f4-5b44-4b13-994c-0972e5de6436",
  },
}
`;

exports[`crm/contacts/crisp Create returns error if name is missing 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"Missing fields\\",
  \\"detail\\": \\"Crisp requires Email and Name to create new contact\\"
}
AST Path: definitions[0].statements[1]
Original Map Location: Line 11, column 3",
}
`;

exports[`crm/contacts/crisp Search performs successfully 1`] = `
Ok {
  "value": Array [
    Object {
      "company": "Superface AI",
      "country": "CZ",
      "customProperties": Object {
        "propertyAddedOnCreation": "field value",
        "propertyAddedOnUpdate": "field value",
      },
      "email": "support+station@superface.ai",
      "firstName": "Station Test",
      "id": "11f0b7f4-5b44-4b13-994c-0972e5de6436",
      "lastName": "Support",
      "phone": "+420123456789",
    },
  ],
}
`;

exports[`crm/contacts/crisp Search performs successfully for contacts without name 1`] = `
Ok {
  "value": Array [
    Object {
      "company": undefined,
      "country": undefined,
      "customProperties": Object {},
      "email": "support+stationnoname@superface.ai",
      "firstName": undefined,
      "id": "6e3fef92-51f2-4af5-9f51-4ea2a4dfa2fa",
      "lastName": undefined,
      "phone": undefined,
    },
  ],
}
`;

exports[`crm/contacts/crisp Search returns error for unknown operator 1`] = `
Err {
  "error": "Input validation failed:
Path: input.operator
Error: Invalid enum value: \\"%\\"
Path: input.operator
Error: Invalid enum value: \\"%\\"",
}
`;

exports[`crm/contacts/crisp Update performs successfully 1`] = `
Ok {
  "value": Object {
    "id": "support+station@superface.ai",
  },
}
`;

exports[`crm/contacts/crisp Update returns error for non existent contact 1`] = `
Err {
  "error": "HTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"Not found\\",
  \\"detail\\": \\"Contact or website was not found or Crisp plugin is not subscribed. Make sure the Crisp website exists and uses your plugin\\"
}
AST Path: definitions[1].statements[1].responseHandlers[2].statements[1]
Original Map Location: Line 97, column 7",
}
`;
